[package]
name = "polkadot-cli"
description = "Polkadot Relay-chain Client Node"
version = "0.9.36"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.9", features = ["derive"], optional = true }
log = "0.4.17"
thiserror = "1.0.31"
futures = "0.3.21"
pyro = { package = "pyroscope", version = "0.3.1", optional = true }

service = { package = "polkadot-service", path = "../node/service", default-features = false, optional = true }
polkadot-client = { path = "../node/client", optional = true }
polkadot-node-core-pvf = { path = "../node/core/pvf", optional = true }
polkadot-performance-test = { path = "../node/test/performance-test", optional = true }

sp-core = {version = "7.0.0", path = "../primitives/core" }
sp-io = {  version = "7.0.0", path = "../primitives/io" }
sp-keyring = { version = "7.0.0", path = "../primitives/keyring" }
frame-benchmarking-cli = { version = "4.0.0-dev", path = "../utils/frame/benchmarking-cli", optional = true  }
try-runtime-cli = { version = "0.10.0-dev", optional = true, path = "../utils/frame/try-runtime/cli" }
sc-cli = { version = "0.10.0-dev", path = "../client/cli", optional = true  }
sc-service = { version = "0.10.0-dev",  path = "../client/service", optional = true  }
polkadot-node-metrics = { path = "../node/metrics" }
sc-tracing = { version = "4.0.0-dev", path = "../client/tracing", optional = true  }
sc-sysinfo = { version = "6.0.0-dev", path = "../client/sysinfo"}
sc-executor = { version = "0.10.0-dev", path = "../client/executor"  }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", path = "../utils/build-script-utils" }

[features]
default = ["db", "cli", "hostperfcheck", "full-node", "polkadot-native"]
db = ["service/db"]
cli = [
	"clap",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"frame-benchmarking-cli",
	"try-runtime-cli",
	"polkadot-client",
	"polkadot-node-core-pvf",
]
runtime-benchmarks = [
	"service/runtime-benchmarks",
	"polkadot-node-metrics/runtime-benchmarks",
	"polkadot-performance-test?/runtime-benchmarks"
]
full-node = ["service/full-node"]
try-runtime = ["service/try-runtime", "try-runtime-cli/try-runtime"]
fast-runtime = ["service/fast-runtime"]
pyroscope = ["pyro"]
hostperfcheck = ["polkadot-performance-test"]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
polkadot-native = ["service/polkadot-native"]


malus = ["full-node", "service/malus"]
runtime-metrics = ["service/runtime-metrics", "polkadot-node-metrics/runtime-metrics"]
