[package]
name = "polkadot-core-primitives"
version = "0.9.36"
edition = "2021"

[dependencies]
sp-std = { version = "5.0.0", default-features = false, path = "../primitives/std" }
sp-runtime = { version = "7.0.0", default-features = false, path = "../primitives/runtime" }
sp-core = { version = "7.0.0",default-features = false, path = "../primitives/core" }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
	"parity-scale-codec/std",
]
