[package]
name = "polkadot-erasure-coding"
version = "0.9.36"
edition = "2021"

[dependencies]
polkadot-primitives = { path = "../primitives2" }
polkadot-node-primitives = { package = "polkadot-node-primitives", path = "../node/primitives" }
novelpoly = { package = "reed-solomon-novelpoly", version = "1.0.0" }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["std", "derive"] }
sp-core = { version = "7.0.0", path = "../primitives/core" }
sp-trie = { version = "7.0.0", path = "../primitives/trie" }
thiserror = "1.0.31"
