[package]
name = "polkadot-rpc"
version = "0.9.36"
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives2" }
sc-client-api = { version = "4.0.0-dev", path = "../client/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../primitives/blockchain" }
sp-keystore = {version = "0.13.0", path = "../primitives/keystore" }
sp-runtime = { version = "7.0.0", path = "../primitives/runtime" }
sp-api = { version = "4.0.0-dev", path = "../primitives/api" }
sp-consensus = {version = "0.10.0-dev", path = "../primitives/consensus/common" }
sp-consensus-babe = { version = "0.10.0-dev", path = "../primitives/consensus/babe"}
sc-chain-spec = { version = "4.0.0-dev", path = "../client/chain-spec"  }
sc-rpc = { version = "4.0.0-dev", path = "../client/rpc" }
sc-consensus-babe = {  version = "0.10.0-dev", path = "../client/consensus/babe" }
sc-consensus-babe-rpc = { version = "0.10.0-dev", path = "../client/consensus/babe/rpc" }
sc-consensus-epochs = {  version = "0.10.0-dev", path = "../client/consensus/epochs"  }
sc-finality-grandpa = {  version = "0.10.0-dev", path = "../client/finality-grandpa" }
sc-finality-grandpa-rpc = {version = "0.10.0-dev", path = "../client/finality-grandpa/rpc" }
sc-sync-state-rpc = { version = "0.10.0-dev", path = "../client/sync-state-rpc" }
txpool-api = { package = "sc-transaction-pool-api", version = "4.0.0-dev", path = "../client/transaction-pool/api" } 
frame-rpc-system = { package = "substrate-frame-rpc-system", version = "4.0.0-dev", path = "../utils/frame/rpc/system" }
mmr-rpc = { version = "4.0.0-dev", path = "../client/merkle-mountain-range/rpc/" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", default-features = false, path = "../frame/transaction-payment/rpc"}
sp-block-builder = { version = "4.0.0-dev", path = "../primitives/block-builder"  }
beefy-gadget = { version = "4.0.0-dev", path = "../client/beefy" }
beefy-gadget-rpc = {path = "../client/beefy/rpc" }
substrate-state-trie-migration-rpc = { path = "../utils/frame/rpc/state-trie-migration-rpc"  }
