[package]
name = "polkadot-statement-table"
version = "0.9.36"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
sp-core = { version = "7.0.0", path = "../primitives/core" }
primitives = { package = "polkadot-primitives", path = "../primitives2" }
