[package]
name = "xcm"
description = "The basic XCM datastructures."
version = "0.9.36"
edition = "2021"

[dependencies]
impl-trait-for-tuples = "0.2.2"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
sp-runtime = { version = "7.0.0", default-features = false, path = "../primitives/runtime" }
derivative = {version = "2.2.0", default-features = false, features = [ "use_core" ] }
log = { version = "0.4.17", default-features = false }
xcm-procedural = { path = "procedural" }

[features]
default = ["std"]
wasm-api = []
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
]
