[package]
name = "polkadot-node-collation-generation"
version = "0.9.36"
edition = "2021"
[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../gum" }
polkadot-erasure-coding = { path = "../../erasure-coding" }
polkadot-node-primitives = { path = "../primitives" }
polkadot-node-subsystem = { path = "../subsystem" }
polkadot-node-subsystem-util = { path = "../subsystem-util" }
polkadot-primitives = { path = "../../primitives2" }
sp-core = { version = "7.0.0", path = "../../primitives/core" }
sp-maybe-compressed-blob  = { version = "4.1.0-dev", path = "../../primitives/maybe-compressed-blob" }
thiserror = "1.0.31"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["bit-vec", "derive"] }

[dev-dependencies]
polkadot-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../primitives2/test-helpers" }
