[package]
name = "tracing-gum"
version = "0.9.36"
edition = "2021"
description = "Stick logs together with the TraceID as provided by tempo"

[dependencies]
tracing = "0.1.35"
jaeger = { path = "../jaeger", package = "polkadot-node-jaeger", default-features = false }
gum-proc-macro = { path = "./proc-macro", package = "tracing-gum-proc-macro", default-features = false }
polkadot-primitives = { path = "../../primitives2", features = ["std"] }
