[package]
name = "polkadot-node-jaeger"
version = "0.9.36"
edition = "2021"
description = "Polkadot Jaeger primitives, but equally useful for Grafana/Tempo"

[dependencies]
mick-jaeger = "0.1.8"
lazy_static = "1.4"
parking_lot = "0.12.0"
polkadot-primitives = { path = "../../primitives2" }
polkadot-node-primitives = { path = "../primitives" }
sc-network = {version = "0.10.0-dev", path = "../../client/network"}
sp-core = { version = "7.0.0", path = "../../primitives/core" }
thiserror = "1.0.31"
tokio = "1.22.0"
log = "0.4.17"
parity-scale-codec = { version = "3.1.5", default-features = false }
