[package]
name = "polkadot-node-primitives"
description = "Primitives types for the Node-side"
version = "0.9.36"
edition = "2021"
[dependencies]
bounded-vec = "0.6"
futures = "0.3.21"
polkadot-primitives = { path = "../../primitives2" }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
sp-core = { version = "7.0.0", path = "../../primitives/core"  }
sp-application-crypto = {version = "7.0.0", path = "../../primitives/application-crypto" }
sp-consensus-vrf = { version = "0.10.0-dev", path = "../../primitives/consensus/vrf" }
sp-consensus-babe = {  version = "0.10.0-dev", path = "../../primitives/consensus/babe" }
sp-keystore = {  version = "0.13.0", path = "../../primitives/keystore" }
sp-maybe-compressed-blob = { version = "4.1.0-dev", path = "../../primitives/maybe-compressed-blob" }
polkadot-parachain = { path = "../../parachain", default-features = false }
schnorrkel = "0.9.1"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = { version = "0.11.2", default-features = false }

[dev-dependencies]
polkadot-erasure-coding = { path = "../../erasure-coding" }
