[package]
name = "polkadot-node-subsystem-util"
description = "Subsystem traits and message definitions"
version = "0.9.36"
edition = "2021"
[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
itertools = "0.10"
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
parking_lot = "0.11.2"
pin-project = "1.0.9"
rand = "0.8.5"
thiserror = "1.0.31"
fatality = "0.0.6"
gum = { package = "tracing-gum", path = "../gum" }
derive_more = "0.99.17"
lru = "0.8.0"

polkadot-node-subsystem = {path = "../subsystem" }
polkadot-node-jaeger = { path = "../jaeger" }
polkadot-node-metrics = { path = "../metrics" }
polkadot-node-network-protocol = { path = "../network/protocol" }
polkadot-primitives = { path = "../../primitives2" }
polkadot-node-primitives = { path = "../primitives" }
polkadot-overseer = { path = "../overseer" }
metered = { package = "prioritized-metered-channel", version = "0.2.0" }

sp-core = { version = "7.0.0", path = "../../primitives/core" }
sp-application-crypto = {  version = "7.0.0", path = "../../primitives/application-crypto"}
sp-keystore = { version = "0.13.0", path = "../../primitives/keystore" }

kvdb = "0.13.0"
parity-db = { version = "0.4.2"}

[dev-dependencies]
assert_matches = "1.4.0"
env_logger = "0.9.0"
futures = { version = "0.3.21", features = ["thread-pool"] }
log = "0.4.17"
polkadot-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
lazy_static = "1.4.0"
polkadot-primitives-test-helpers = { path = "../../primitives2/test-helpers" }
kvdb-shared-tests = "0.11.0"
tempfile = "3.1.0"
kvdb-memorydb = "0.13.0"
