[package]
name = "polkadot-node-subsystem"
description = "Subsystem traits and message definitions and the generated overseer"
version = "0.9.36"
edition = "2021"

[dependencies]
polkadot-overseer = { path = "../overseer" }
polkadot-node-subsystem-types = { path = "../subsystem-types" }
polkadot-node-jaeger = { path = "../jaeger" }
