[package]
name = "test-parachains"
description = "Integration tests using the test-parachains"
version = "0.9.36"
edition = "2021"
[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }

adder = { package = "test-parachain-adder", path = "adder" }
halt = { package = "test-parachain-halt", path = "halt" }

[dev-dependencies]
sp-core = { version = "7.0.0", path = "../../primitives/core" }

[features]
default = ["std"]
std = ["adder/std", "halt/std"]
