[package]
name = "polkadot-runtime-common"
version = "0.9.36"
edition = "2021"

[dependencies]
impl-trait-for-tuples = "0.2.2"
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"

beefy-primitives = { version = "4.0.0-dev", path = "../../primitives/beefy", default-features = false, package = "sp-beefy" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api", default-features = false  }
inherents = { package = "sp-inherents", version = "4.0.0-dev", path = "../../primitives/inherents", default-features = false  }
sp-std = { package = "sp-std", version = "5.0.0", default-features = false, path = "../../primitives/std" }
sp-io = { version = "7.0.0", path = "../../primitives/io", default-features = false  }
sp-runtime = {  version = "7.0.0", path = "../../primitives/runtime", default-features = false  }
sp-session = {  version = "4.0.0-dev", default-features = false, path = "../../primitives/session" }
sp-staking = {  version = "4.0.0-dev", default-features = false, path = "../../primitives/staking" }
sp-core = { version = "7.0.0", default-features = false, path = "../../primitives/core" }
sp-npos-elections = {version = "4.0.0-dev", default-features = false, path = "../../primitives/npos-elections" }

pallet-authorship = { version = "4.0.0-dev", default-features = false, path = "../../frame/authorship" }
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../../frame/balances" }
pallet-session = { version = "4.0.0-dev", path = "../../frame/session", default-features = false }
frame-support = {  version = "4.0.0-dev", default-features = false, path = "../../frame/support"  }
pallet-staking = { version = "4.0.0-dev", default-features = false, path = "../../frame/staking" }
pallet-staking-reward-fn = { version = "4.0.0-dev", default-features = false, path = "../../frame/staking/reward-fn" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../frame/system"  }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../../frame/timestamp" }
pallet-vesting = { version = "4.0.0-dev", default-features = false, path = "../../frame/vesting" }
pallet-transaction-payment = {version = "4.0.0-dev", default-features = false, path = "../../frame/transaction-payment" }
pallet-treasury = { version = "4.0.0-dev", default-features = false, path = "../../frame/treasury" }
pallet-election-provider-multi-phase = { version = "4.0.0-dev", default-features = false, path = "../../frame/election-provider-multi-phase"}
pallet-beefy-mmr = {version = "4.0.0-dev", default-features = false, path = "../../frame/beefy-mmr" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/election-provider-support" }
pallet-bags-list = {  version = "4.0.0-dev", default-features = false, path = "../../frame/bags-list" }

frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../../frame/benchmarking", optional = true }
pallet-babe = { version = "4.0.0-dev", default-features = false, path = "../../frame/babe", optional = true  }

primitives = { package = "polkadot-primitives", path = "../../primitives2", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }

slot-range-helper = { path = "slot_range_helper", default-features = false }
xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
frame-support-test = { version = "3.0.0", path = "../../frame/support/test" }
pallet-babe = { version = "4.0.0-dev", path = "../../frame/babe" }
pallet-treasury = { version = "4.0.0-dev", path = "../../frame/treasury" }
sp-keystore = { version = "0.13.0", path = "../../primitives/keystore" }
serde_json = "1.0.81"
libsecp256k1 = "0.7.0"
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../primitives2/test-helpers" }

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"rustc-hex/std",
	"serde_derive",
	"serde/std",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-beefy-mmr/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-staking-reward-fn/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-election-provider-multi-phase/std",
	"slot-range-helper/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"frame-system/std",
	"libsecp256k1/std",
	"runtime-parachains/std",
	"xcm/std",
	"sp-npos-elections/std",
	"pallet-bags-list/std"
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"libsecp256k1/static-context",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
]
try-runtime = [
	"runtime-parachains/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
]
